[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["chanhong-ji <jichanhong24@gmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
